--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,5 +14,10 @@
             android:layout_height="wrap_content"
             android:text="New EditText"
             android:id="@+id/editText" android:layout_gravity="left|center_vertical"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/startBtn" android:layout_gravity="center"/>
 </LinearLayout>
 
