--- a/NotePad/res/layout/custom_list.xml
+++ b/NotePad/res/layout/custom_list.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <TextView
-            android:layout_width="98dp"
+            android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="Key"
             android:id="@+id/txtKey"/>
     <TextView
-            android:layout_width="156dp"
+            android:layout_width="fill_parent"
             android:layout_height="49dp"
             android:text="Context"
             android:id="@+id/txtContext"/>
